# projeto-carros

./: db.sqlite3  main.py  pyproject.toml  requirements.txt  uwsgi.ini
accounts/: views.py
accounts/templates/: create_user.html  login.html  new_user.html  new_user_success.html
app/: settings.py  urls.py
app/templates/: base.html
cars/: admin.py  forms.py  models.py  signals.py  views.py
cars/migrations/: 0001_initial.py  0002_rename_factory_yaer_car_factory_year.py  0003_brand_alter_car_brand.py  0004_car_image_car_plate_alter_car_price.py  0005_carinvertory.py  0006_rename_carinvertory_carinventory.py  0007_car_bio.py
cars/templates/: base.html  car_detail.html  cars.html  cars_detail.html  cars_details.html  create_brand.html  create_car.html  delete_car.html  new_brand.html  new_car.html  update_car.html
openai_api/: client.py  prompt.py
