[project]
name = "projeto-carros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.ruff]
# Configurações gerais
line-length = 88
target-version = "py313"

# Diretórios e arquivos a serem incluídos/excluídos
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",  # Exclui arquivos de migração do Django
]

[tool.ruff.lint]
# Regras habilitadas
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DJ",    # flake8-django
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "S",     # flake8-bandit
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]

# Regras desabilitadas
ignore = [
    "E501",   # Line too long (já tratado pelo line-length)
    "S101",   # Use of assert (comum em testes)
    "S311",   # Uso de random (para casos específicos)
    "T201",   # print statements (útil durante desenvolvimento)
    "DJ001",  # Evita models.CharField(..., null=True)
]

# Regras específicas por arquivo
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",   # Permite assert em testes
    "S106",   # Permite hardcoded passwords em testes
    "S108",   # Permite temp files em testes
]
"**/settings/**/*.py" = [
    "S105",   # Permite hardcoded passwords em settings
    "S106",   # Permite hardcoded passwords em settings
]
"manage.py" = [
    "T201",   # Permite print no manage.py
]

[tool.ruff.lint.mccabe]
# Complexidade máxima
max-complexity = 10

[tool.ruff.lint.isort]
# Configuração do isort
known-django = ["django"]
known-first-party = ["projeto_carros"]
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "django",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.flake8-django]
# Configuração específica do Django
django-settings-module = "projeto_carros.settings"

[tool.ruff.format]
# Configuração do formatter
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
