[project]
name = "projeto-carros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "openai>=1.97.0",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.2",
]

[tool.ruff]
# Configurações gerais
line-length = 88
target-version = "py313"

# Diretórios e arquivos a serem incluídos/excluídos
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",  # Exclui arquivos de migração do Django
    "**/*.html",
    "templates",
    "static",      # Adicional: exclui arquivos estáticos
    "media",       # Adicional: exclui arquivos de media
]

[tool.ruff.lint]
# Regras habilitadas
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DJ",    # flake8-django
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "S",     # flake8-bandit
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]

# Regras desabilitadas
ignore = [
    "E501",   # Line too long (já tratado pelo line-length)
    "S101",   # Use of assert (comum em testes)
    "S311",   # Uso de random (para casos específicos)
    "T201",   # print statements (útil durante desenvolvimento)
    "DJ001",  # Evita models.CharField(..., null=True)
]

# Regras específicas por arquivo
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",   # Permite assert em testes
    "S106",   # Permite hardcoded passwords em testes
    "S108",   # Permite temp files em testes
]
"**/settings/**/*.py" = [
    "S105",   # Permite hardcoded passwords em settings
    "S106",   # Permite hardcoded passwords em settings
]
"settings.py" = [
    "S105",   # Permite hardcoded passwords em settings
    "S106",   # Permite hardcoded passwords em settings
]
"manage.py" = [
    "T201",   # Permite print no manage.py
]
"**/migrations/**/*.py" = [
    "E501",   # Migrations podem ter linhas longas
    "N806",   # Migrations podem ter nomes não-convencionais
]

[tool.ruff.lint.mccabe]
# Complexidade máxima
max-complexity = 10

[tool.ruff.lint.isort]
# Configuração do isort
known-third-party = ["django"]
known-first-party = ["projeto_carros"]
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
# Configuração do formatter
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
# Ajuste para seus diretórios reais
include = ["projeto_carros"]  # ou ["src", "apps"] se for sua estrutura
exclude = ["**/migrations", "venv", ".venv", "static", "media"]

# Corrigido para Python 3.13
pythonVersion = "3.13"
typeCheckingMode = "basic"

# Django específico
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportDuplicateImport = true

# Ignorar alguns warnings comuns do Django
reportAttributeAccessIssue = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

# Adicional: configurações úteis para Django
reportOptionalMemberAccess = true
reportOptionalCall = true
reportUnusedImport = true
